[gd_scene load_steps=8 format=3 uid="uid://dca31lgf1n6va"]

[ext_resource type="Script" path="res://scripts/Enemy-Rusher.gd" id="1_afyt1"]
[ext_resource type="Texture2D" uid="uid://bxdbp25n26t0o" path="res://assets/Pixel Spaceships - Shoot'em Ups pack HD/AndromedaRangerExplorer.png" id="2_ol4vn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nc6v8"]
size = Vector2(53, 31)

[sub_resource type="Animation" id="Animation_7gvlh"]
resource_name = "Bounce"

[sub_resource type="Animation" id="Animation_fqub4"]
resource_name = "explode"
length = 0.4

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t3r12"]
_data = {
"Bounce": SubResource("Animation_7gvlh"),
"explode": SubResource("Animation_fqub4")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lhbpq"]
size = Vector2(53, 31)

[node name="Enemy_Rusher" type="CharacterBody2D" groups=["Enemies"]]
position = Vector2(0, -274)
collision_layer = 4
collision_mask = 32
script = ExtResource("1_afyt1")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(0.113281, 0.113281)
texture = ExtResource("2_ol4vn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_nc6v8")

[node name="MoveTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t3r12")
}

[node name="HitDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetection"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_lhbpq")

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="body_entered" from="HitDetection" to="." method="_on_hit_detection_body_entered"]
